chore(swagger): inclusao de operationId na doc
